Задания по модулям/module4/nginx_cdn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-cdn
  labels:
    app: nginx-cdn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-cdn
  template:
    metadata:
      labels:
        app: nginx-cdn
    spec:
      volumes:
      - name: shared-data
        emptyDir: {}
      containers:
      - name: nginx-cdn
        image: cr.yandex/crpcqt038mmskd2ime3g/nginx_cdn:latest
        command: ["sh", "-c", "nginx -g 'daemon off;'"]
        ports:
        - containerPort: 80
        volumeMounts:
        - name: shared-data
          mountPath: /var/www/html/
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /.done
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-cdn
  labels:
    app: nginx-cdn
spec:
  selector:
    app: nginx-cdn
  ports:
  - port: 80
    targetPort: 80
